# bserv

./: .gitignore  .gitmodules  BUILD-Windows.md  BUILD-ubuntu.md  CMakeLists.txt  LICENSE  README.md  bserv-debug-x64.props  bserv-release-x64.props  bserv.cpp  client.hpp  common.hpp  config-Windows.json  config-example.json  config-ubuntu.json  config.hpp  config.json  db.sql  handlers.hpp  logging.hpp  main.cpp  router.hpp  routing.hpp  session.hpp  utils.hpp
WebApp/: CMakeLists.txt  WebApp.cpp  WebApp.sln  WebApp.vcxproj  handlers.cpp  rendering.cpp  rendering.h
WebApp/WebApp/: CMakeLists.txt  WebApp.cpp  WebApp.vcxproj  WebApp.vcxproj.filters  handlers.cpp  handlers.h  rendering.cpp  rendering.h
WebApp/bserv/: CMakeLists.txt  bserv.cpp  bserv.vcxproj  client.cpp  database.cpp  session.cpp
WebApp/bserv/include/bserv/: common.hpp  config.hpp  database.hpp  logging.hpp  router.hpp  session.hpp  utils.hpp  websocket.hpp
bserv/: CMakeLists.txt  bserv.cpp  bserv.vcxproj  bserv.vcxproj.filters  client.hpp  common.hpp  config.hpp  database.hpp  logging.hpp  pch.h  router.hpp  server.cpp  server.hpp  session.cpp  session.hpp  utils.cpp  utils.hpp  websocket.hpp
bserv/include/bserv/: client.hpp  common.hpp  config.hpp  database.hpp  logging.hpp  router.hpp  server.hpp  session.hpp  utils.hpp
dependencies/: README-Windows.md  README-ubuntu.md  README.md
examples/: CMakeLists.txt  DB.vcxproj  DB.vcxproj.filters  Examples.sln  Hello.vcxproj  Hello.vcxproj.filters  Routing.vcxproj  Routing.vcxproj.filters  db.cpp  db.sql  hello.cpp  routing.cpp
examples/hello-world/: CMakeLists.txt
scripts/: db_test.py  request_test.py  ws_test.py
templates/: base.html  index.html  users.html
test/: DBTest.cpp  DBTest.py  DBTest.sql  DBTest.vcxproj  DBTest.vcxproj.filters  RequestSessionTest.cpp  RequestSessionTest.py  RequestSessionTest.vcxproj  RequestSessionTest.vcxproj.filters  Test.sln
test/scripts/: db_test.py  request_test.py  serving_file_test.py  web_page_test.py  ws_test.py
